# admin-agent-pro

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  run_bot.py
directives/: N8n_Agent_Administration_Main.json  PRD.md  admin_invoice.md  admin_mileage.md  admin_quote.md  admin_rent_receipt.md  admin_rental_charges.md
docs/: functional-schema.md
docs/plan/: n8n-migration-plan.md
execution/: init_db.py  reset_db.py  seed_db.py  telegram_bot.py
execution/agents/: __init__.py  base_admin_agent.py  invoice_agent.py  mileage_agent.py  orchestrator_agent.py  quote_agent.py  rent_receipt_agent.py  rental_charges_agent.py
execution/core/: config.py
execution/models/: database.py  documents.py
execution/prompts/: invoice_prompts.py  mileage_prompts.py  orchestrator_prompts.py  quote_prompts.py  rent_receipt_prompts.py  rental_charges_prompts.py
execution/tools/: __init__.py  calculator_tool.py  database_query_tool.py  db_manager.py  email_sender_tool.py  markdown_cleaner_tool.py  pdf_generator.py  telegram_helpers.py  whisper_transcription_tool.py
tests/unit/: test_calculator_tool.py  test_database_query_tool.py  test_markdown_cleaner_tool.py
