[project]
name = "workflows-boilerplate"
version = "0.1.0"
description = "Boilerplate for building agentic workflows with Python and AI agents"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # LLM Providers
    "langchain-openai>=0.1.0",

    # Agentic Frameworks
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",

    # Database & State Management
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",

    # Utilities
    "tenacity>=8.5.0",
    "aiofiles>=24.1.0",

    # Logging & Observability
    "structlog>=24.4.0",

    # Telegram Bot
    "python-telegram-bot>=21.0",

    # PDF Generation
    "reportlab>=4.0.0",

    # Template Engine
    "jinja2>=3.1.0",

    # Date handling (French locale)
    "babel>=2.14.0",

    # Email
    "aiosmtplib>=3.0.0",

    # OpenAI (Whisper)
    "openai>=1.58.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",

    # Linting & Formatting
    "ruff>=0.5.0",

    # Type checking
    "mypy>=1.11.0",
]

full = [
    # Additional providers
    "mistralai>=1.0.0",
    "groq>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/workflows-boilerplate"
Documentation = "https://github.com/yourusername/workflows-boilerplate/blob/main/README.md"
Repository = "https://github.com/yourusername/workflows-boilerplate"
Issues = "https://github.com/yourusername/workflows-boilerplate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["execution"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from exceptions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=execution",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "langfuse.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["execution"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
